fix double scroll (#110)
* update ocelot routes

* fix double scroll

--- a/frontend/src/app/modules/album/components/album-details/album-details.component.sass
+++ b/frontend/src/app/modules/album/components/album-details/album-details.component.sass
@@ -5,8 +5,7 @@ $image-size: 245px
 main
     background: $drk-gray
     width: 100%
-    height: 100vh
-    overflow-y: scroll
+    height: 100%
 
 .album
     width: 100%
